# amazon_stock_ml

./: .env  HistoricalData_1731547025648.csv  README.md  requirements.txt
API/: .env  Configurações utilizadas no projeto  database.db  pyproject.toml
API/app/: main.py  models.py  schemas.py  settings.py  webscrapper.py
Dash/: analise_acoes.pbix
EDA/: analise_exploratoria.ipynb
Modelo/: class_model.ipynb  lstm_model.ipynb
